--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hls-adaptive-bitrate-streaming",
+  "name": "question-gen-backend",
   "version": "0.1.0",
   "description": "Q&A Gen backend",
   "type": "module",
