added appwrite endpoint as env

--- a/.env.exemple
+++ b/.env.exemple
@@ -19,6 +19,7 @@ REFRESH_TOKEN_EXPIRY=90d
 
 # Appwrite
 APPWITE_PROJECT_ID=YOUR_APPWRITE_PROJECT_ID
+APPWRITE_ENDPOINT=YOUR_APPWRITE_ENDPOINT
 APPWRITE_API_KEY=YOUR_APPWRITE_API_KEY
 
 # Mail
